--- a/index.html
+++ b/index.html
@@ -3,15 +3,22 @@
     <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
   </head>
   <body>
-    <!--
     <a-scene>
-      <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
-      <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
-      <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
-      <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
-      <a-sky color="#ECECEC"></a-sky>
+      <a-camera position="0 2 4">
+        <a-cursor color="#4CC3D9" fuse="true" timeout="10"></a-cursor>
+      </a-camera>
+      <a-sphere color="#F44336" radius="1" position="0 2 0"></a-sphere>
     </a-scene>
-    !-->
-    Hey. This is a test file for using a VR B)
+    <script>
+AFRAME.registerComponent('set-sky', {
+  schema: {default: ''},
+
+  init() {
+    this.el.addEventListener('click', () => {
+      console.log(this.data);
+    });
+  }
+});
+</script>
   </body>
 </html>
