--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <html>
   <head>
+    <meta charset="utf-8"></meta>
     <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
-  </head>
-  <body>
     <script>
       AFRAME.registerComponent('set-sky', {
         schema: {default: ''},
@@ -14,11 +13,14 @@
         }
       });
     </script>
+  </head>
+  <body>
     <a-scene>
       <a-camera position="0 2 4">
         <a-cursor color="#4CC3D9" fuse="true" timeout="10"></a-cursor>
       </a-camera>
-      <a-sphere color="#F44336" radius="1" position="0 2 0"></a-sphere>
+      <a-sphere set-sky="hello" color="#F44336" radius="1" position="0 2 0"></a-sphere>
+      <a-sky></a-sky>
     </a-scene>
   </body>
 </html>
